--- a/index.html
+++ b/index.html
@@ -381,16 +381,16 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./Images/Hopper Feeder.jpg"
+                src="./Images/RC Helicopter.jpg"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Hopper Feeder</h2>
+            <h2 class="experience-sub-title project-title">RC Helicopter</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./moreinfo1.html'"
+                onclick="location.href='./moreinfo13.html'"
               >
                 More Info
               </button>
@@ -399,8 +399,82 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./Images/Drone.jpg"
+                src="./Images/V6 Turbo Charge.jpg"
                 alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">V6 Turbo Charge</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo14.html'"
+              >
+                More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Heat Exchanger.jpg"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Heat Exchanger</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo15.html'"
+              >
+                More Info
+            </button>
+            </div>
+          </div>
+        </div>
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Sheet Metal Cutting Machine.jpg"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Sheet Cutting Machine</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo10.html'"
+              >
+              More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Water Tank.jpg"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Water Tank</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo11.html'"
+              >
+                More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Drone2.jpg"
+                alt="Project 3"
                 class="project-img"
               />
             </div>
@@ -408,30 +482,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./moreinfo2.html'"
+                onclick="location.href='./moreinfo9.html'"
               >
-                More Info
+              More Info
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./Images/Screw Water Turbine.jpg"
-                alt="Project 3"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Screw WaterTurbine</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='./moreinfo3.html'"
-              >
-                More Info
-            </button>
-            </div>
-          </div>
+          
         </div>
       </div>
       <div class="experience-details-container">
@@ -496,18 +553,18 @@
         <div class="details-container color-container">
           <div class="article-container">
             <img
-              src="./Images/hydraulic press break bending machine.jpg"
+              src="./Images/Hopper Feeder.jpg"
               alt="Project 1"
               class="project-img"
             />
           </div>
-          <h2 class="experience-sub-title project-title">Hydraulic Press Break Bending</h2>
+          <h2 class="experience-sub-title project-title">Hopper Feeder</h2>
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='./moreinfo7.html'"
+              onclick="location.href='./moreinfo1.html'"
             >
-            More Info
+              More Info
             </button>
           </div>
         </div>
@@ -532,75 +589,19 @@
         <div class="details-container color-container">
           <div class="article-container">
             <img
-              src="./Images/Drone2.jpg"
+              src="./Images/Screw Water Turbine.jpg"
               alt="Project 3"
               class="project-img"
             />
           </div>
-          <h2 class="experience-sub-title project-title">Drone</h2>
+          <h2 class="experience-sub-title project-title">Screw WaterTurbine</h2>
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='./moreinfo9.html'"
-            >
-            More Info
-            </button>
-          </div>
-        </div>
-      </div>
-      <div class="about-containers">
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="./Images/Sheet Metal Cutting Machine.jpg"
-              alt="Project 1"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Sheet Metal Cutting Machine</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='./moreinfo10.html'"
-            >
-            More Info
-            </button>
-          </div>
-        </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="./Images/Water Tank.jpg"
-              alt="Project 2"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">Water Tank</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='./moreinfo11.html'"
+              onclick="location.href='./moreinfo3.html'"
             >
               More Info
-            </button>
-          </div>
-        </div>
-        <div class="details-container color-container">
-          <div class="article-container">
-            <img
-              src="./Images/project1.png"
-              alt="Project 3"
-              class="project-img"
-            />
-          </div>
-          <h2 class="experience-sub-title project-title">PROJECT</h2>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2 project-btn"
-              onclick="location.href='./moreinfo12.html'"
-            >
-            More Info
-            </button>
+          </button>
           </div>
         </div>
       </div>
