--- a/moreinfo14.html
+++ b/moreinfo14.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hopper Feeder | Projects | AmiiCAD | Amit Sharma</title>
+    <title>V6 Turbo Charge | Projects | AmiiCAD | Amit Sharma</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="website icon" type="jpg" href="./Images/logo.jpg">
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="website icon" type="jpg" href="./Images/logo.jpg">
 
 </head>
 <style>
@@ -46,7 +46,7 @@
       margin: 0px 2rem;
     }
     .more-images{
-      height: 28vh;
+      height: 20vh;
     }
     @media screen and (max-width: 600px){
       .details-container{
@@ -101,27 +101,27 @@
       
 
       <section id="projects">
-        <h1 class="title">Drone</h1>
+        <h1 class="title">V6 Turbo Charge</h1>
         <div class="experience-details-container">
           <div class="about-containers">
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./Images/Drone.jpg"
+                  src="./Images/V6 Turbo Charge.jpg"
                   alt="Project 1"
                   class="project-img"
                 />
               </div>
               <div class="data">
-                <h2 class="experience-sub-title project-title">Drone</h2>
-                <p class="project-info">The air coming out of the spinning blades pushes downward on the ground, which in turn pushes the drone into the air</p>
+                <h2 class="experience-sub-title project-title">V6 Turbo Charge</h2>
+                <!-- <p class="project-info">A helical camshaft, often used in modern engines, is a type of camshaft featuring helical lobes instead of the more traditional straight lobes. This design allows for smoother and more precise control over valve timing, which is essential for optimizing engine performance, efficiency, and emissions.</p> -->
                 <div class="more-images">
 
                 </div>
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://mega.nz/file/qQlWHZpA#Wvi0QCtxErmd9BcMBh-gsxjGdFhcNXYYSlajqHSnolU'"
+                    onclick="location.href='https://mega.nz/file/bY8AFLRJ#BFpwjGLkXrISKV3o-u1xLyYCutZZmndDo6gE7V9WUdw'"
                   >
                     Download
                   </button>
