--- a/project.html
+++ b/project.html
@@ -71,230 +71,236 @@
         <p class="section__text__p1">Browse My All Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
+
           <div class="about-containers">
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Hopper Feeder.jpg"
-                  alt="Project 1"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Hopper Feeder</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo1.html'"
-                >
-                More Info
-                </button>
-              </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/RC Helicopter.jpg"
+                alt="Project 1"
+                class="project-img"
+              />
             </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Drone.jpg"
-                  alt="Project 2"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Drone</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo2.html'"
-                >
-                  More Info
-                </button>
-              </div>
-            </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Screw Water Turbine.jpg"
-                  alt="Project 3"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Screw WaterTurbine</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo3.html'"
-                >
+            <h2 class="experience-sub-title project-title">RC Helicopter</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo13.html'"
+              >
                 More Info
-                </button>
-              </div>
+              </button>
             </div>
           </div>
-          <div class="about-containers">
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Hydraulic Press.jpg"
-                  alt="Project 1"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Hydraulic Press</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo4.html'"
-                >
-                More Info
-                </button>
-              </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/V6 Turbo Charge.jpg"
+                alt="Project 2"
+                class="project-img"
+              />
             </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Helical CAM shaft.jpg"
-                  alt="Project 2"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Helical CAM shaft</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo5.html'"
-                >
-                  More Info
-                </button>
-              </div>
-            </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Universal joint.jpg"
-                  alt="Project 3"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Universal joint</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo6.html'"
-                >
+            <h2 class="experience-sub-title project-title">V6 Turbo Charge</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo14.html'"
+              >
                 More Info
-                </button>
-              </div>
+              </button>
             </div>
           </div>
-          <div class="about-containers">
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/hydraulic press break bending machine.jpg"
-                  alt="Project 1"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Hydraulic Press Break Bending</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo7.html'"
-                >
-                More Info
-                </button>
-              </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Heat Exchanger.jpg"
+                alt="Project 3"
+                class="project-img"
+              />
             </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Screw Conveyor.jpg"
-                  alt="Project 2"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Screw Conveyor</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo8.html'"
-                >
-                  More Info
-                </button>
-              </div>
-            </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Drone2.jpg"
-                  alt="Project 3"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Drone</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo9.html'"
-                >
+            <h2 class="experience-sub-title project-title">Heat Exchanger</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo15.html'"
+              >
                 More Info
-                </button>
-              </div>
+            </button>
             </div>
           </div>
-          <div class="about-containers">
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Sheet Metal Cutting Machine.jpg"
-                  alt="Project 1"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Sheet Metal Cutting Machine</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo10.html'"
-                >
-                More Info
-                </button>
-              </div>
+        </div>
+
+
+
+
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Sheet Metal Cutting Machine.jpg"
+                alt="Project 1"
+                class="project-img"
+              />
             </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/Water Tank.jpg"
-                  alt="Project 2"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">Water Tank</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo11.html'"
-                >
-                  More Info
-                </button>
-              </div>
-            </div>
-            <div class="details-container color-container">
-              <div class="article-container">
-                <img
-                  src="./Images/project1.png"
-                  alt="Project 3"
-                  class="project-img"
-                />
-              </div>
-              <h2 class="experience-sub-title project-title">PROJECT</h2>
-              <div class="btn-container">
-                <button
-                  class="btn btn-color-2 project-btn"
-                  onclick="location.href='./moreinfo12.html'"
-                >
-                More Info
-                </button>
-              </div>
+            <h2 class="experience-sub-title project-title">Sheet Cutting Machine</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo10.html'"
+              >
+              More Info
+              </button>
             </div>
           </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Water Tank.jpg"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Water Tank</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo11.html'"
+              >
+                More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Drone2.jpg"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Drone</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo9.html'"
+              >
+              More Info
+              </button>
+            </div>
+          </div>
+          
+        </div>
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Hydraulic Press.jpg"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Hydraulic Press</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo4.html'"
+              >
+                More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/hydraulic press break bending machine.jpg"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Hydraulic Bending Machine</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo7.html'"
+              >
+                More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Universal joint.jpg"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Universal Joint</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo6.html'"
+              >
+                More Info
+            </button>
+            </div>
+          </div>
+        </div>
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Hopper Feeder.jpg"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Hopper Feeder</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo1.html'"
+              >
+                More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Screw Conveyor.jpg"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Screw Conveyor</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo8.html'"
+              >
+                More Info
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./Images/Screw Water Turbine.jpg"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Screw WaterTurbine</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='./moreinfo3.html'"
+              >
+                More Info
+            </button>
+            </div>
+          </div>
+        </div>
          
 
 
