--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 AmiiCAD || Design and created by <a href="https://www.linkedin.com/company/rixi-lab/" style="text-decoration: none; color: #555555;">Rixi Lab</a>. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 AmiiCAD || Design and created by <a href="https://rixilab.tech" style="text-decoration: none; color: #555555;">Rixi Lab</a>. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
