--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AmiiCAD | Amit Sharma</title>
     <link rel="website icon" type="jpg" href="./Images/logo.jpg">
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="popup.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
 
@@ -426,7 +427,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./moreinfo15.html'"
+                onclick="openPopup()"
               >
                 More Info
             </button>
@@ -681,5 +682,53 @@
       <p>Copyright &#169; 2025 AmiiCAD || Design and created by <a href="https://rixilab.tech" style="text-decoration: none; color: #555555;">Rixi Lab</a>. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
+    <script src="popup.js"></script>
+
+
+
+
+    <!-- Overlay + Popup -->
+  <div class="overlay" id="popupOverlay">
+    <div class="popup">
+      <div class="close-btn" onclick="closePopup()">✖</div>
+
+      <!-- Left Section -->
+      <div class="popup-left">
+        <!-- 3D Model -->
+        <iframe title="Aloe vera plant" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/66c6699e50ab4863989777f920a981dd/embed"> </iframe>
+        
+        <!-- Image Slider -->
+        <div class="image-slider">
+          <img src="./images/Heat Exchanger.jpg" alt="Image1">
+          <img src="./images/Heat Exchanger.jpg" alt="Image2">
+          <img src="./images/Heat Exchanger.jpg" alt="Image3">
+        </div>
+      </div>
+
+      <!-- Right Section -->
+      <div class="popup-right">
+        <div>
+          <h1>Heat Exchanger</h1>
+          <div class="content">
+            <p>A heat exchanger is a device designed to efficiently transfer heat between two or more fluids (liquids, gases, or a combination of both) without mixing them. Heat exchangers are widely used in industries, power plants, refrigeration, air conditioning, automotive systems, and many engineering applications.</p>
+            <p><b>Working Principle:</b> The basic principle of a heat exchanger is thermal conduction and convection. One fluid carries heat, which is transferred through a solid wall (usually metal) to another fluid. Depending on the flow arrangement, heat exchangers can be parallel flow, counterflow, or crossflow.</p>
+            <h4>Shell and Tube Heat Exchanger</h4>
+            <ul>
+              <li>Consists of a series of tubes inside a cylindrical shell.</li>
+              <li>One fluid flows inside the tubes while the other flows around them within the shell.</li>
+              <li>Commonly used in power plants, chemical industries, and refineries.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="buttons">
+          <button>Download</button>
+          <button>Share</button>
+          <button>Comment</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   </body>
 </html>
