--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
         <div class="buttons">
           <button>Download</button>
           <button>Share</button>
-          <button>Comment</button>
+          <button onclick="closePopup()">Close</button>
         </div>
       </div>
 
