--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
       <!-- Left Section -->
       <div class="popup-left">
         <!-- 3D Model -->
-        <iframe title="Aloe vera plant" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/66c6699e50ab4863989777f920a981dd/embed"> </iframe>
+        <!-- <iframe title="Aloe vera plant" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/66c6699e50ab4863989777f920a981dd/embed"> </iframe> -->
         
         <!-- Image Slider -->
         <div class="image-slider">
