--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
   </style>
   <body>
     <nav id="desktop-nav">
-      <div class="logo"><b>AmiiCAD</b></div>
+      
+      <div class="logo"><img src="./Images/nav logo.jpg" alt="" width="20%"></div>
       <div>
         <ul class="nav-links">
           <li><a style="background-color: gray; color: white; border-radius: 30px; padding: 5px 10px;" href="#about">Home</a></li>
