--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">AmiiCAD</div>
+      <div class="logo"><img src="./Images/nav logo.jpg" alt="" width="20%"></div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
