--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
           <div class="text-container">
             <p style="font-size: 20px;">
-              HI, it's Amit Sharma from Kolkata and I have experience in CAD Design, Product Design, 3D Rendering, 3D Modeling, and 3D Animation. So if you want to hire a CAD designer I may be a good choice for you. Please give me a chance. You can contact me through my social media accounts. <br> Thank you for your interest, and feel free to reach out to me with any questions or project inquiries.
+              Hi, it's Amit Sharma from Kolkata and I have experience in CAD Design, Product Design, 3D Rendering, 3D Modeling, and 3D Animation. So if you want to hire a CAD designer I may be a good choice for you. Please give me a chance. You can contact me through my social media accounts. <br> Thank you for your interest, and feel free to reach out to me with any questions or project inquiries.
             </p>
           </div>
         </div>
